style: dark mode styling for lists and fix conflicting colors

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -59,11 +59,7 @@ input:focus-visible {
 
 @layer utilities {
 	.immich-form-input {
-		@apply bg-slate-100 p-2 rounded-md dark:text-immich-dark-bg focus:border-immich-primary text-sm;
-	}
-
-	.immich-form-input-dark {
-		@apply bg-slate-200 p-2 rounded-md focus:border-immich-primary text-sm;
+		@apply bg-slate-100 p-2 rounded-md dark:text-immich-dark-bg focus:border-immich-primary text-sm dark:bg-gray-600 dark:text-immich-dark-fg;
 	}
 
 	.immich-form-label {
